--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,15 +53,15 @@ jobs:
         run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
 
       - name: Unit Test
-        run: dotnet test --configuration $BUILD_CONFIG  --no-restore --logger "trx;LogFileName=test-results.trx" || true
+        run: dotnet test --configuration $BUILD_CONFIG --no-restore --no-build --settings runsettings.xml
 
       - name: Test Report
         uses: dorny/test-reporter@v1
         if: always()
         with:
           name: DotNET Tests
-          path: "**/test-results.trx"
-          reporter: dotnet-trx
+          path: TestResults
+          reporter: dotnet-xml
           fail-on-error: true
 
       - name: Install GitVersion
@@ -75,14 +75,14 @@ jobs:
       - run: |
           echo "FullSemVer: ${{ steps.gitversion.outputs.fullSemVer }}"
 
-      # - name: Codecov
-      #   uses: codecov/codecov-action@v4.5.0
+      - name: Codecov
+        uses: codecov/codecov-action@v4.5.0
 
-      # - name: Upload dotnet test results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: BlazorApp-test-results
-      #     path: TestResults
+      - name: Upload dotnet test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlazorApp-test-results
+          path: TestResults
 
         # Use always() to always run this step to
         # publish test results when there are test failures
