Update GitHub Actions workflow and test reporting
- Updated `dotnet.yml` to include write permissions for checks and pull-requests.
- Modified `dotnet test` command to log results in TRX format.
- Switched test reporting to `EnricoMi/publish-unit-test-result-action@v2` for TRX, XML, and JSON formats.
- Commented out Codecov and dotnet test results upload steps.
- Added properties in `BlazorApp.Unit.Tests.csproj` to configure VSTest logger for TRX output and set test results directory.

--- a/src/Tests/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
+++ b/src/Tests/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
@@ -30,6 +30,9 @@
 		</PackageReference>
 	</ItemGroup>
 
-
+	<PropertyGroup>
+		<VSTestLogger>trx%3bLogFileName=$(MSBuildProjectName).trx</VSTestLogger>
+		<VSTestResultsDirectory>$(MSBuildThisFileDirectory)/TestResults/$(TargetFramework)</VSTestResultsDirectory>
+	</PropertyGroup>
 
 </Project>
