--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,10 @@ jobs:
     env:
       BUILD_CONFIG: 'Release'
       SOLUTION: 'BlazorApp.sln'
+      
+    permissions:
+      checks: write
+      pull-requests: write
 
     runs-on: ubuntu-latest
 
@@ -53,16 +57,16 @@ jobs:
         run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
 
       - name: Unit Test
-        run: dotnet test --configuration $BUILD_CONFIG --no-restore --no-build --settings runsettings.xml
+        run: dotnet test --configuration $BUILD_CONFIG --no-restore --no-build --logger "trx;LogFileName=test-results.trx"
 
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          name: DotNET Tests
-          path: TestResults
-          reporter: dotnet-xml
-          fail-on-error: true
+          files: |
+            test-results/**/*.xml
+            test-results/**/*.trx
+            test-results/**/*.json
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.10.2
@@ -75,14 +79,14 @@ jobs:
       - run: |
           echo "FullSemVer: ${{ steps.gitversion.outputs.fullSemVer }}"
 
-      - name: Codecov
-        uses: codecov/codecov-action@v4.5.0
+      # - name: Codecov
+      #   uses: codecov/codecov-action@v4.5.0
 
-      - name: Upload dotnet test results
-        uses: actions/upload-artifact@v4
-        with:
-          name: BlazorApp-test-results
-          path: TestResults
+      # - name: Upload dotnet test results
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: BlazorApp-test-results
+      #     path: TestResults
 
         # Use always() to always run this step to
         # publish test results when there are test failures
