Refactor CI workflows and improve test result handling
- Added environment variables to `create-test-report.yml` and `dotnet.yml` to configure .NET CLI behavior and provide the GitHub token.
- Updated `dotnet.yml` to include additional .NET CLI settings, such as disabling telemetry and skipping the first-time experience.
- Removed and re-added the `TEST-RESULTS` variable with a different path pattern.
- Replaced the `Publish Test Results` step with an `Upload Test Results` step using `actions/upload-artifact@v4`.
- Added a new step to upload the event file using `actions/upload-artifact@v4`.
- Removed commented-out steps related to Codecov and uploading test results.
- Ensured the `Upload Test Results` step runs always with `if: always()`.

--- a/.github/workflows/create-test-report.yml
+++ b/.github/workflows/create-test-report.yml
@@ -7,6 +7,9 @@ on:
       - completed
 permissions: {}
 
+env:
+   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   test-results:
     name: Test Results
