--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -66,7 +66,7 @@ jobs:
         run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
 
       - name: Unit Test
-        run: dotnet test --configuration $BUILD_CONFIG --no-restore --no-build
+        run: dotnet test --configuration $BUILD_CONFIG --no-restore --no-build --logger trx --results-directory TestResults
 
       - name: Upload Event File
         uses: actions/upload-artifact@v4
@@ -79,8 +79,16 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Test Results
-          path: |
-            /**/Test Results/**/*.trx
+          path: TestResults
+
+      - name: Codecov
+        uses: codecov/codecov-action@v4.5.0
+
+      - name: Upload dotnet test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: BlazorApp-test-results
+          path: TestResults
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v3.0.0
@@ -92,15 +100,6 @@ jobs:
         uses: gittools/actions/gitversion/execute@v3.0.0
       - run: |
           echo "FullSemVer: ${{ steps.gitversion.outputs.fullSemVer }}"
-
-      # - name: Codecov
-      #   uses: codecov/codecov-action@v4.5.0
-
-      # - name: Upload dotnet test results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: BlazorApp-test-results
-      #     path: TestResults
 
         # Use always() to always run this step to
         # publish test results when there are test failures
