--- a/src/BlazorApp.Shared/BlazorApp.Shared.csproj
+++ b/src/BlazorApp.Shared/BlazorApp.Shared.csproj
@@ -12,8 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.8" />
+    <PackageReference Include="MongoDB.Bson" Version="2.28.0" />
   </ItemGroup>
 
 </Project>
