--- a/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
+++ b/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
@@ -15,6 +15,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="bunit" Version="1.31.3" />
+		<PackageReference Include="FluentAssertions" Version="6.12.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,11 +24,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="xunit" Version="2.9.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\BlazorApp.Client\BlazorApp.Client.csproj" />
+	  <ProjectReference Include="..\BlazorApp.Shared\BlazorApp.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
