--- a/src/BlazorApp.Shared.Unit.Tests/BlazorApp.Shared.Unit.Tests.csproj
+++ b/src/BlazorApp.Shared.Unit.Tests/BlazorApp.Shared.Unit.Tests.csproj
@@ -15,15 +15,16 @@
 
 	<ItemGroup>
 		<PackageReference Include="bunit" Version="1.31.3" />
+		<PackageReference Include="FluentAssertions" Version="6.12.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Moq" Version="4.20.70" />
 		<PackageReference Include="xunit" Version="2.9.0" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,24 +33,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\BlazorApp.Shared\BlazorApp.Shared.csproj" />
-		<ProjectReference Include="..\BlazorApp\BlazorApp.csproj" />
+	  <ProjectReference Include="..\BlazorApp.Client\BlazorApp.Client.csproj" />
+	  <ProjectReference Include="..\BlazorApp.Shared\BlazorApp.Shared.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="Bunit.Core">
-			<HintPath>..\..\..\teqsl\.nuget\packages\bunit.core\1.31.3\lib\net8.0\Bunit.Core.dll</HintPath>
-		</Reference>
-		<Reference Include="Bunit.Web">
-			<HintPath>..\..\..\teqsl\.nuget\packages\bunit.web\1.31.3\lib\net8.0\Bunit.Web.dll</HintPath>
-		</Reference>
-		<Reference Include="xunit.core">
-			<HintPath>..\..\..\teqsl\.nuget\packages\xunit.extensibility.core\2.9.0\lib\netstandard1.1\xunit.core.dll</HintPath>
-		</Reference>
+	  <Folder Include="Services\" />
 	</ItemGroup>
 
+
 	<PropertyGroup>
-		<RootNamespace>BlazorApp</RootNamespace>
+		<RootNamespace>BlazorApp.Shared</RootNamespace>
 	</PropertyGroup>
-	
+
 </Project>
