--- a/src/BlazorApp/BlazorApp.csproj
+++ b/src/BlazorApp/BlazorApp.csproj
@@ -10,6 +10,7 @@
 		<ProjectReference Include="..\BlazorApp.Client\BlazorApp.Client.csproj" />
 		<ProjectReference Include="..\BlazorApp.Shared\BlazorApp.Shared.csproj" />
 		<PackageReference Include="Auth0.AspNetCore.Authentication" Version="1.4.1" />
+		<PackageReference Include="Blazored.SessionStorage" Version="2.4.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.8" />
 	</ItemGroup>
