--- a/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
+++ b/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
@@ -15,12 +15,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="bunit" Version="1.31.3" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="RichardSzalay.MockHttp" Version="7.0.0" />
+		<PackageReference Include="Verify.Bunit" Version="11.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
