--- a/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
+++ b/src/BlazorApp.Unit.Tests/BlazorApp.Unit.Tests.csproj
@@ -15,6 +15,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="bunit" Version="1.36.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.11" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
 		<PackageReference Include="coverlet.collector" Version="6.0.2">
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
