--- a/src/BlazorApp.AppHost/BlazorApp.AppHost.csproj
+++ b/src/BlazorApp.AppHost/BlazorApp.AppHost.csproj
@@ -1,16 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <IsAspireHost>true</IsAspireHost>
-    <UserSecretsId>7e4537ce-4fa5-4714-9072-31575b12abd3</UserSecretsId>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <IsAspireHost>true</IsAspireHost>
+        <UserSecretsId>7e4537ce-4fa5-4714-9072-31575b12abd3</UserSecretsId>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.2" />
+        <PackageReference Include="Aspire.Hosting.MongoDB" Version="8.2.2" />
+        <PackageReference Include="Aspire.Hosting.Redis" Version="8.2.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\BlazorApp.Shared\BlazorApp.Shared.csproj" IsAspireProjectResource="false" />
+        <ProjectReference Include="..\BlazorApp\BlazorApp.csproj" />
+    </ItemGroup>
 
 </Project>
