Update Dependabot config for consistent scheduling
Changed the GitHub Actions update schedule to weekly on Sundays at 16:00, adding labels and reviewers for better management. Defined groups and applied similar configurations to NuGet and DotNet SDK ecosystems to ensure uniform monitoring of dependencies. This aims to streamline the dependency review process and improve team collaboration.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,10 +11,49 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+      day: "sunday"
+      time: "16:00"
+    open-pull-requests-limit: 10
+    labels:
+      - "github-actions"
+      - "dependencies"
+    reviewers:
+      - "mpaulosky"
+    groups:
+      all-actions:
+        patterns: [ "*" ]
 
   # Maintain dependencies for nuget
   - package-ecosystem: "nuget"
-    directory: "/"
+    directory: "/nuget/helpers/lib/NuGetUpdater"
     schedule:
       interval: "weekly"
+      day: "sunday"
+      time: "16:00"
+    open-pull-requests-limit: 10
+    labels:
+      - "nuget"
+      - "dependencies"
+    reviewers:
+      - "mpaulosky"
+    groups:
+      all-actions:
+        patterns: [ "*" ]
+
+  #Maintain DotNet Sdk
+  - package-ecosystem: "dotnet-sdk"
+    directory: "/nuget/helpers/lib/NuGetUpdater"
+    schedule:
+      interval: "weekly"
+      day: "sunday"
+      time: "16:00"
+    open-pull-requests-limit: 10
+    labels:
+      - "dotnet-sdk"
+      - "dependencies"
+    reviewers:
+      - "mpaulosky"
+    groups:
+      all-actions:
+        patterns: [ "*" ]
